<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/moviePost"
            android:layout_width="180dp"
            android:layout_height="220dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/movieTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_title"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/moviePost"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/moviePopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/popularity"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/moviePost"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle2" />

        <TextView
            android:id="@+id/moviePopularityCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:text="@string/_1728_076"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/moviePopularity"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle2" />

        <EditText
            android:id="@+id/movieVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/vote_count"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/moviePost"
            app:layout_constraintTop_toBottomOf="@+id/moviePopularityCount" />

        <TextView
            android:id="@+id/movieVoteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            android:text="@string/_1628"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/movieVote"
            app:layout_constraintTop_toBottomOf="@+id/moviePopularityCount" />

        <EditText
            android:id="@+id/movieLangauge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/langauge"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/moviePost"
            app:layout_constraintTop_toBottomOf="@+id/movieVoteCount" />

        <TextView
            android:id="@+id/movieLangaugeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:text="@string/english"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/movieLangauge"
            app:layout_constraintTop_toBottomOf="@+id/movieVoteCount" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/movieSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/movie_summary"
        android:textColor="#000000"
        android:textSize="20sp" />


</androidx.appcompat.widget.LinearLayoutCompat>